transitions working (except final pies), refactored to stacked functions

--- a/style.css
+++ b/style.css
@@ -23,15 +23,15 @@ html,body{
 	height:600px;
 }
 .container .controls{
-	margin-bottom:20px;
+	margin-bottom:10px;
 }
 
 /*------------font-------------*/
 body{
 	font-size: 16px;
 }
-h1{ font-size:2em;}
-h2{ font-size:1.3em;}
+h1{ font-size:1.7em;}
+h2{ font-size:1em;}
 p{
 	font-family:"Droid Serif", serif;
 }
@@ -44,9 +44,9 @@ p{
     //stroke-dasharray:3px 3px;
 }
 
-svg text{
+/*svg text{
     font-size:9px;
-}
+}*/
 .activity-2 path,
 .activity-2 text{
     fill-opacity:.8;
